Fix some styling on mobile & IE

--- a/themes/terminal/src/styles/main.scss
+++ b/themes/terminal/src/styles/main.scss
@@ -28,8 +28,10 @@ body {
 }
 
 #container {
-  display: flex;
   margin-bottom: 50px;
+  @media (min-width: $screen-medium) {
+    display: flex;
+  }
 }
 
 #main {
